Add floating TOC that works on mobile
By "works on mobile", of course I mean that it seems to work in the
mobile emulators built into Chrome as of this date.

Also tested it on a browser window narrowed to half the screen width,
since I use that configuration a lot.

--- a/data/style.css
+++ b/data/style.css
@@ -5,24 +5,11 @@ body {
 	max-width: 66%;
 }
 
-/* #toc { */
-/* 	/\* float: left; *\/ */
-/* 	/\* width: 30%; *\/ */
-/* 	/\* overflow: hidden; *\/ */
-/* } */
-
-/* #toc ul > li { */
-/* 	list-style-type: none; */
-/* } */
-
-/* #content { */
-/* 	float: right; */
-/*     width: 60%; */
-/* } */
-
-/* #clearing { */
-/* 	clear: both; */
-/* } */
+#toc {
+    position: fixed;
+    right: 4em;
+    top: 0em;
+}
 
 h1,h2,h3,h4,h5,h6 {
   color: #205081;
