--- a/data/style.css
+++ b/data/style.css
@@ -17,13 +17,11 @@ h1,h2,h3,h4,h5,h6 {
   line-height: 1.25;
 }
 
-/* a:link { */
-/* 	color: #205081; */
-/* 	text-decoration: none; */
-/* 	font-weight: bold; */
-/* 	font-size: 1.4; */
-/* 	font-family: Helvetica; */
-/* } */
+a:link {
+	color: #800000;
+	font-weight: bold;
+	font-family: Helvetica;
+}
 
 p {
   text-align: justify;
